top bar contrast issue

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -54,3 +54,12 @@ body {
 .hr-aluminium {
   border-block-end: 1px soild var(--aluminium);
 }
+
+/*------------------*/
+//  #TOPBAR
+/*------------------*/
+
+.top-bar {
+  background-color: var(--priest-light);
+  color: var(--lead);
+}
