--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -49,8 +49,6 @@ main {
 .top-bar {
   text-align: center;
   padding-block: 0.25rem;
-  background-color: var(--priest-blue);
-  color: var(--mercury);
   text-wrap: pretty;
   z-index: var(--canopy);
   position: relative;
